--- a/index.html
+++ b/index.html
@@ -43,6 +43,30 @@
     <div id="main">
       <div class="project">
 	<div class="cover">
+		<img src="content/shape/cover.png"/>
+
+	</div>
+	<div class="title"><a href="shape.html">
+		shape
+	</a></div>
+	<div class="tags">
+		<ol><li>type</li></ol>
+	</div>
+</div>
+<div class="clear"></div><div class="project">
+	<div class="cover">
+		<img src="content/piksels/cover.gif"/>
+
+	</div>
+	<div class="title"><a href="piksels.html">
+		piksels
+	</a></div>
+	<div class="tags">
+		<ol><li>type</li><li>pixel</li></ol>
+	</div>
+</div>
+<div class="clear"></div><div class="project">
+	<div class="cover">
 		<img src="content/wave/cover.gif"/>
 
 	</div>
@@ -55,26 +79,14 @@
 </div>
 <div class="clear"></div><div class="project">
 	<div class="cover">
-		<img src="content/test/cover.png"/>
+		<img src="content/boringSans/cover.PNG"/>
 
 	</div>
-	<div class="title"><a href="test.html">
-		test
+	<div class="title"><a href="BoringSans.html">
+		Boring Sans
 	</a></div>
 	<div class="tags">
-		<ol><li>tag1</li><li>tag2</li><li>tag3</li></ol>
-	</div>
-</div>
-<div class="clear"></div><div class="project">
-	<div class="cover">
-		<img src="content/hello/cover.png"/>
-
-	</div>
-	<div class="title"><a href="hello.html">
-		hello
-	</a></div>
-	<div class="tags">
-		<ol><li>a</li><li>b</li><li>c</li></ol>
+		<ol><li>type</li><li>yawn</li></ol>
 	</div>
 </div>
 <div class="clear"></div>
