--- a/type/fonts.html
+++ b/type/fonts.html
@@ -18,6 +18,7 @@
 <link rel="stylesheet" href="css/WayneRound.css" />
 <link rel="stylesheet" href="css/Niccolo-Test_normalized.css" />
 <link rel="stylesheet" href="css/somename.css" />
+<link rel="stylesheet" href="css/bitmap.css" />
 <link rel="stylesheet" href="css/trees.css" />
 <link rel="stylesheet" href="css/Magnetik.css" />
 <link rel="stylesheet" href="css/Pan-Taper_one.css" />
@@ -98,7 +99,11 @@
 <p contenteditable="true" class="lineView">OHamburgefonstiv</p>
 
 <p contenteditable="true" class="gridView invisible">A</p>
-</div><div class='fontItem lineView trees'>
+</div><div class='fontItem lineView bitmap noLowercase'>
+<p contenteditable="true" class="lineView">ZX SPECTRUM</p>
+
+<p contenteditable="true" class="gridView invisible">R</p>
+<div class='varSup' id='sliders-bitmap'><input type='range' class='ax' min='0.0' max='1000.0' value='0.0' id='bitmapPIXL'>PIXL <input type='range' class='ax' min='50.0' max='200.0' value='100.0' id='bitmapPROP'>PROP <input type='range' class='ax' min='-50.0' max='50.0' value='0.0' id='bitmapslnt'>slnt </div></div><div class='fontItem lineView trees'>
 <p contenteditable="true" class="lineView">HORTUS BOTANICUS</p>
 
 <p contenteditable="true" class="gridView invisible">A</p>
