--- a/piksels.html
+++ b/piksels.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
-    <title>Ripple Type</title>
+    <title>piksels</title>
     
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/main.css" />
@@ -42,8 +42,27 @@
 
 
     <div id='main'>
-      <img src='content/wave/img01.png'/><img src='content/wave/water.gif'/>
+      <img src='content/piksels/cover.gif'/>
+      <p class="description">
+        This Piksels project is an idea for a variable system for pixels fonts.
+        All the pixel in the glyphs are components. And all the pixel-shapes are present as seperate glyphs.
+        A scripts builds the designspace according to the various pixel-shapes present and some parameters, and all the needed sources are generated. Then the variable font can be generated.
+      </p>
+      <img src='content/piksels/fontOverview.png'/>
       <!-- <div id="bottomline">&nbsp;</div> -->
     </div>
   </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
