--- a/shape.html
+++ b/shape.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
-    <title>Ripple Type</title>
+    <title>shape</title>
     
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/main.css" />
@@ -42,7 +42,7 @@
 
 
     <div id='main'>
-      <img src='content/wave/img01.png'/><img src='content/wave/water.gif'/>
+      <img src='content/shape/rover.png'/><img src='content/shape/RLS.PNG'/><img src='content/shape/Qq.PNG'/><img src='content/shape/figures.PNG'/><img src='content/shape/lineup.PNG'/>
       <!-- <div id="bottomline">&nbsp;</div> -->
     </div>
   </body>
