--- a/piksels.html
+++ b/piksels.html
@@ -48,6 +48,7 @@
         All the pixel in the glyphs are components. And all the pixel-shapes are present as seperate glyphs.
         A scripts builds the designspace according to the various pixel-shapes present and some parameters, and all the needed sources are generated. Then the variable font can be generated.
       </p>
+      <img src='content/piksels/spectrum.gif'/>
       <img src='content/piksels/fontOverview.png'/>
       <!-- <div id="bottomline">&nbsp;</div> -->
     </div>
