--- a/RippleType.html
+++ b/RippleType.html
@@ -42,7 +42,10 @@
 
 
     <div id='main'>
-      <img src='content/wave/img01.png'/><img src='content/wave/water.gif'/>
+      <img src='content/wave/img01.png'/>
+<p class="description">An experiment with variable font technology to create a smooth wavey font, that can loop and have some parameters to alter the appearance.</p>
+<img src='content/wave/water.gif'/>
+
       <!-- <div id="bottomline">&nbsp;</div> -->
     </div>
   </body>
