--- a/piksels_backup.html
+++ b/piksels_backup.html
@@ -43,16 +43,27 @@
 
     <div id='main'>
       <img src='content/piksels/cover.gif'/>
-<p class="description">This Piksels project is an idea for a variable system for pixels fonts.
-All the pixel in the glyphs are components. And all the pixel-shapes are present as seperate glyphs.
-A scripts builds the designspace according to the various pixel-shapes present and some parameters [ proportion, slant, rotation ], and all the needed sources are generated. Then the variable font can be generated.
-In this example I have 6 alphabets, these are accessible via FeatureVariations. </p>
-<img src='content/piksels/spectrum.gif'/>
-<img src='content/piksels/DK2.gif'/>
-<img src='content/piksels/CASTLE.gif'/>
-<img src='content/piksels/fontOverview.png'/>
-
+      <p class="description">
+        This Piksels project is an idea for a variable system for pixels fonts.
+        All the pixel in the glyphs are components. And all the pixel-shapes are present as seperate glyphs.
+        A scripts builds the designspace according to the various pixel-shapes present and some parameters, and all the needed sources are generated. Then the variable font can be generated.
+      </p>
+      <img src='content/piksels/spectrum.gif'/>
+      <img src='content/piksels/fontOverview.png'/>
       <!-- <div id="bottomline">&nbsp;</div> -->
     </div>
   </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
