--- a/shape.html
+++ b/shape.html
@@ -42,7 +42,13 @@
 
 
     <div id='main'>
-      <img src='content/shape/rover.png'/><img src='content/shape/RLS.PNG'/><img src='content/shape/Qq.PNG'/><img src='content/shape/figures.PNG'/><img src='content/shape/lineup.PNG'/>
+      <img src='content/shape/rover.png'/>
+<p class="description">Something something something</p>
+<img src='content/shape/RLS.PNG'/>
+<img src='content/shape/Qq.PNG'/>
+<img src='content/shape/figures.PNG'/>
+<img src='content/shape/lineup.PNG'/>
+
       <!-- <div id="bottomline">&nbsp;</div> -->
     </div>
   </body>
