--- a/BoringSans.html
+++ b/BoringSans.html
@@ -43,6 +43,8 @@
 
     <div id='main'>
       <img src='content/boringSans/cover.png'/>
+<p class="description">Something something something</p>
+
       <!-- <div id="bottomline">&nbsp;</div> -->
     </div>
   </body>
