--- a/piksels.html
+++ b/piksels.html
@@ -43,13 +43,35 @@
 
     <div id='main'>
       <img src='content/piksels/cover.gif'/>
-<p class="description">This Piksels project is an idea for a variable system for pixels fonts.
+<p class="description">This Piksels project is an idea for a variable system for pixels fonts.<br>
 All the pixel in the glyphs are components. And all the pixel-shapes are present as seperate glyphs.
-A scripts builds the designspace according to the various pixel-shapes present and some parameters [ proportion, slant, rotation ], and all the needed sources are generated. Then the variable font can be generated.
-In this example I have 6 alphabets, these are accessible via FeatureVariations. </p>
+A scripts builds the designspace according to the various pixel-shapes present and some parameters [ proportion, slant, rotation ], and all the needed sources are generated. Then the variable font can be generated.<br>
+In this example I have 7 alphabets,<a href="#varUnit">these are accessible via FeatureVariations, on the second slider</a>. </p>
 <img src='content/piksels/spectrum.gif'/>
 <img src='content/piksels/DK2.gif'/>
 <img src='content/piksels/CASTLE.gif'/>
+<link rel='stylesheet' href='type/css/Piksels.css'/>
+<div class='Piksels noLowercase' id='varUnit'>
+
+<p contenteditable="true" class="lineView">DUCK HUNT</p>
+<div class='varSup' style='text-transform: capitalize;' id='sliders-Piksels'><input type='range' class='ax' min='0.0' max='700.0' value='0.0' id='PikselsPIXL'>Pixel<br><input type='range' class='ax' min='1.0' max='7.0' value='1.0' id='PikselsCHAR'>Character Set<br><input type='range' class='ax' min='50.0' max='150.0' value='100.0' id='PikselsPROP'>Proportion<br><input type='range' class='ax' min='-50.0' max='50.0' value='0.0' id='Pikselsslnt'>Slant<br><input type='range' class='ax' min='0.0' max='360.0' value='0.0' id='PikselsROTA'>Rotate<br></div>
+<script>
+const PikselsSliders = document.querySelector("#sliders-Piksels");
+PikselsSliders.oninput = PikselsChanger;
+function PikselsChanger(e) {
+  let fontElements = document.querySelectorAll("div.Piksels");
+  fontElements.forEach(function (fontElement) {
+    fontElement.style.cssText =
+      "font-variation-settings:" +
+"'PIXL' " + document.querySelector("#PikselsPIXL").value
++",'CHAR' " + document.querySelector("#PikselsCHAR").value
++",'PROP' " + document.querySelector("#PikselsPROP").value
++",'slnt' " + document.querySelector("#Pikselsslnt").value
++",'ROTA' " + document.querySelector("#PikselsROTA").value
+  });}</script>
+</div>
+
+
 <img src='content/piksels/fontOverview.png'/>
 
       <!-- <div id="bottomline">&nbsp;</div> -->
