--- a/RippleType.html
+++ b/RippleType.html
@@ -43,7 +43,10 @@
 
     <div id='main'>
       <img src='content/wave/img01.png'/>
-<p class="description">An experiment with variable font technology to create a smooth wavey font, that can loop and have some parameters to alter the appearance.</p>
+<p class="description">This is a fine example where variable fonts and animation go hand in hand.<br>
+The phase of a wave repeats over and over to create a smooth animation. Other parameters in this design are the amplitute, wave-length, the speed of the phase, and the direction of the phase. <br><br>
+
+I wrote a tool to create this font out of a normal font. To declare the extreme for the amplitude, and all the wave-lengths, the wave-font is generated.<br> </p>
 <img src='content/wave/water.gif'/>
 
       <!-- <div id="bottomline">&nbsp;</div> -->
