--- a/index.html
+++ b/index.html
@@ -42,52 +42,36 @@
 
     <div id="main">
       <div class="project">
-	<div class="cover">
-		<img src="content/shape/cover.png"/>
+		<div class="cover">
+			<a href="piksels.html">
+				<img src="content/piksels/cover.gif"/>
+			</a>
 
-	</div>
-	<div class="title"><a href="shape.html">
-		shape
-	</a></div>
-	<div class="tags">
-		<ol><li>type</li></ol>
-	</div>
+		</div>
+
+		<div class="title">
+				<a href="piksels.html">piksels</a>
+		</div>
+		<div class="tags">
+			<ol><li>type</li><li>pixel</li></ol>
+		</div>
+	
 </div>
 <div class="clear"></div><div class="project">
-	<div class="cover">
-		<img src="content/piksels/cover.gif"/>
+		<div class="cover">
+			<a href="RippleType.html">
+				<img src="content/wave/cover.gif"/>
+			</a>
 
-	</div>
-	<div class="title"><a href="piksels.html">
-		piksels
-	</a></div>
-	<div class="tags">
-		<ol><li>type</li><li>pixel</li></ol>
-	</div>
-</div>
-<div class="clear"></div><div class="project">
-	<div class="cover">
-		<img src="content/wave/cover.gif"/>
+		</div>
 
-	</div>
-	<div class="title"><a href="RippleType.html">
-		Ripple Type
-	</a></div>
-	<div class="tags">
-		<ol><li>type</li><li>variable</li><li>experiment</li></ol>
-	</div>
-</div>
-<div class="clear"></div><div class="project">
-	<div class="cover">
-		<img src="content/boringSans/cover.PNG"/>
-
-	</div>
-	<div class="title"><a href="BoringSans.html">
-		Boring Sans
-	</a></div>
-	<div class="tags">
-		<ol><li>type</li><li>yawn</li></ol>
-	</div>
+		<div class="title">
+				<a href="RippleType.html">Ripple Type</a>
+		</div>
+		<div class="tags">
+			<ol><li>type</li><li>variable</li><li>experiment</li></ol>
+		</div>
+	
 </div>
 <div class="clear"></div>
       <!-- <div id="bottomline">&nbsp;</div> -->
