--- a/piksels.html
+++ b/piksels.html
@@ -70,9 +70,9 @@ function PikselsChanger(e) {
 +",'ROTA' " + document.querySelector("#PikselsROTA").value
   });}</script>
 </div>
-
-
+<p class="description desctop">The working file is a single UFO. Here are all the character sets, the pixels, and a temporary pixel for sketching. In the features, the lookups for FeatureSubstitution are declared and the rvrn feature is initiated.  After the font is generated, a custom made GSUB table is merged into the font to make the FeatureSubsitions work.</p>
 <img src='content/piksels/fontOverview.png'/>
+<img src='content/piksels/MARIO.png'/>
 
       <!-- <div id="bottomline">&nbsp;</div> -->
     </div>
