--- a/templateProjectItem.html
+++ b/templateProjectItem.html
@@ -1,13 +1,17 @@
 <div class="project">
-	<div class="cover">
-		<img src="{cover}"/>
+		<div class="cover">
+			<a href="{link}">
+				<img src="{cover}"/>
+			</a>
 
-	</div>
-	<div class="title"><a href="{link}">
-		{title}
-	</a></div>
-	<div class="tags">
-		{tags}
-	</div>
+		</div>
+
+		<div class="title">
+				<a href="{link}">{title}</a>
+		</div>
+		<div class="tags">
+			{tags}
+		</div>
+	
 </div>
 <div class="clear"></div>
