--- a/RippleType.html
+++ b/RippleType.html
@@ -17,7 +17,7 @@
     
     <div id="tagline">
 	<p> 
-		<br>&gt; <b><a href="#">HalloType</a></b> = Thom Janssen = font maker, type engineer, programmer, creative coder <a href="./type/fonts.html"><span class="typelink"> > typefaces&nbsp;&nbsp;&nbsp;</span></a>
+		<br>&gt; <b><a href="https://hallotype.github.io/">HalloType</a></b> = Thom Janssen = font maker, type engineer, programmer, creative coder <a href="./type/fonts.html"><span class="typelink"> > typefaces&nbsp;&nbsp;&nbsp;</span></a>
 
 	</p>
 
