update Wave>Golf + cleanup

--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
 </div>
 <div class="clear"></div><div class="project">
 		<div class="cover">
-			<a href="RippleType.html">
+			<a href="golf.html">
 				<img src="content/wave/cover.gif"/>
 			</a>
 
 		</div>
 
 		<div class="title">
-				<a href="RippleType.html">Ripple Type</a>
+				<a href="golf.html">golf</a>
 		</div>
 		<div class="tags">
 			<ol><li>type</li><li>variable</li><li>experiment</li></ol>
