--- a/golf.html
+++ b/golf.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/project.css" />
+
+    <link rel="stylesheet" href="css/main700.css" />
+    <link rel="stylesheet" href="css/project700.css" />
+    
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300;600&display=swap" rel="stylesheet">
 
 
@@ -47,11 +51,12 @@
 The phase of a wave repeats over and over to create a smooth animation. Other parameters in this design are the amplitute, wave-length, speed, and direction. <br><br>
 
 I wrote a tool to create this font out of a normal font. To declare the extreme for the amplitude, and all the wave-lengths, the wave-font is generated.<br> </p>
-<link rel='stylesheet' href='type/css/waave.css'/>
+
+      <link rel='stylesheet' href='type/css/waave.css'/>
 <div class='waave noLowercase' id='varUnit'>
 
 <p contenteditable="true" class="lineView">CREATE SOME WAVES</p>
-<div class='varSup' style='text-transform: capitalize;' id='sliders-waave'><input type='range' class='ax' min='100.0' max='700.0' value='400.0' id='waaveLMBD'>WaveLength<br><input type='range' class='ax' min='0.0' max='40.0' value='40.0' id='waaveAMPL'>Amplitude<br><input type='range' class='ax' min='0.0' max='10.0' value='0.0' id='waaveSHFT'>Phase<br></div>
+<div class='varSup' style='text-transform: capitalize;' id='sliders-waave'><input type='range' class='ax' min='100.0' max='700.0' value='400.0' id='waaveLMBD'>WaveLength<br><input type='range' class='ax' min='0.0' max='40.0' value='40.0' id='waaveAMPL'>Amplitude<br><input type='range' class='ax' min='0.0' max='10.0' value='0.0' id='waaveSHFT'>Shift<br></div>
 <script>
 const waaveSliders = document.querySelector("#sliders-waave");
 waaveSliders.oninput = waaveChanger;
@@ -66,7 +71,6 @@ function waaveChanger(e) {
   });}</script>
 </div>
 
-      <!-- <div id="bottomline">&nbsp;</div> -->
     </div>
   </body>
 </html>
