--- a/piksels.html
+++ b/piksels.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/project.css" />
+    
+    <link rel="stylesheet" href="css/main700.css" />
+    <link rel="stylesheet" href="css/project700.css" />
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300;600&display=swap" rel="stylesheet">
 
 
