added mobile css to the system

--- a/index.html
+++ b/index.html
@@ -3,32 +3,33 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
+
     <title>HalloType</title>
-    
+
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/project.css" />
- 
+
     <link rel="stylesheet" href="css/main700.css" />
     <link rel="stylesheet" href="css/project700.css" />
 
-    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300;600&display=swap" rel="stylesheet">
-
-
+    <link
+      href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300;600&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="tagline">
-	<p> 
-		<br>&gt; <b><a href="https://hallotype.github.io/">HalloType</a></b> = Thom Janssen = font maker, type engineer, programmer, creative coder <a href="./type/fonts.html"><span class="typelink"> > typefaces&nbsp;&nbsp;&nbsp;</span></a>
-
-	</p>
-
-
+  <p>
+    <br />&gt; <b><a href="https://hallotype.github.io/">HalloType</a></b> =
+    Thom Janssen = font maker, type engineer, programmer, creative coder
+    <a href="./type/fonts.html"
+      ><span class="typelink"> > typefaces&nbsp;&nbsp;&nbsp;</span></a
+    >
+  </p>
 </div>
 
-
-<div id="gohere">
+<!-- <div id="gohere">
 	↑↑↑
 	<br/>
 	go here!
@@ -41,43 +42,36 @@
 &nbsp;↙︎ construction<br/>
 &nbsp;↙︎
 
-</div>
-
+</div> -->
 
     <div id="main">
       <div class="project">
-		<div class="cover">
-			<a href="piksels.html">
-				<img src="content/piksels/cover.gif"/>
-			</a>
+  <div class="cover">
+    <a href="piksels.html">
+      <img src="content/piksels/cover.gif" />
+    </a>
+  </div>
 
-		</div>
-
-		<div class="title">
-				<a href="piksels.html">piksels</a>
-		</div>
-		<div class="tags">
-			<ol><li>type</li><li>pixel</li></ol>
-		</div>
-	
-</div>
-<div class="clear"></div><div class="project">
-		<div class="cover">
-			<a href="golf.html">
-				<img src="content/wave/cover.gif"/>
-			</a>
-
-		</div>
-
-		<div class="title">
-				<a href="golf.html">golf</a>
-		</div>
-		<div class="tags">
-			<ol><li>type</li><li>variable</li><li>experiment</li></ol>
-		</div>
-	
+  <div class="title">
+    <a href="piksels.html">piksels</a>
+  </div>
+  <div class="tags"><ol><li>type</li><li>pixel</li></ol></div>
 </div>
 <div class="clear"></div>
+<div class="project">
+  <div class="cover">
+    <a href="golf.html">
+      <img src="content/wave/cover.gif" />
+    </a>
+  </div>
+
+  <div class="title">
+    <a href="golf.html">golf</a>
+  </div>
+  <div class="tags"><ol><li>type</li><li>variable</li><li>experiment</li></ol></div>
+</div>
+<div class="clear"></div>
+
       <!-- <div id="bottomline">&nbsp;</div> -->
     </div>
   </body>
