--- a/header.html
+++ b/header.html
@@ -1,14 +1,14 @@
 <div id="tagline">
-	<p> 
-		<br>&gt; <b><a href="https://hallotype.github.io/">HalloType</a></b> = Thom Janssen = font maker, type engineer, programmer, creative coder <a href="./type/fonts.html"><span class="typelink"> > typefaces&nbsp;&nbsp;&nbsp;</span></a>
-
-	</p>
-
-
+  <p>
+    <br />&gt; <b><a href="https://hallotype.github.io/">HalloType</a></b> =
+    Thom Janssen = font maker, type engineer, programmer, creative coder
+    <a href="./type/fonts.html"
+      ><span class="typelink"> > typefaces&nbsp;&nbsp;&nbsp;</span></a
+    >
+  </p>
 </div>
 
-
-<div id="gohere">
+<!-- <div id="gohere">
 	↑↑↑
 	<br/>
 	go here!
@@ -21,5 +21,4 @@
 &nbsp;↙︎ construction<br/>
 &nbsp;↙︎
 
-</div>
-
+</div> -->
