--- a/templateProjectItem.html
+++ b/templateProjectItem.html
@@ -1,17 +1,13 @@
 <div class="project">
-		<div class="cover">
-			<a href="{link}">
-				<img src="{cover}"/>
-			</a>
+  <div class="cover">
+    <a href="{link}">
+      <img src="{cover}" />
+    </a>
+  </div>
 
-		</div>
-
-		<div class="title">
-				<a href="{link}">{title}</a>
-		</div>
-		<div class="tags">
-			{tags}
-		</div>
-	
+  <div class="title">
+    <a href="{link}">{title}</a>
+  </div>
+  <div class="tags">{tags}</div>
 </div>
 <div class="clear"></div>
