--- a/templateindex.html
+++ b/templateindex.html
@@ -3,19 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
+
     <title>HalloType</title>
-    
+
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/project.css" />
- 
+
     <link rel="stylesheet" href="css/main700.css" />
     <link rel="stylesheet" href="css/project700.css" />
 
-    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300;600&display=swap" rel="stylesheet">
-
-
+    <link
+      href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300;600&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     {header}
