test mobile css

--- a/type/fonts.html
+++ b/type/fonts.html
@@ -75,11 +75,11 @@
 <p contenteditable="true" class="lineView">OHamburgefonstiv</p>
 
 <p contenteditable="true" class="gridView invisible">A</p>
-<div class='varSup' style='text-transform: capitalize;' id='sliders-Pan'><input type='range' class='ax' min='0.0' max='30.0' value='20.0' id='Panwght'>Weight<br><input type='range' class='ax' min='0.0' max='360.0' value='180.0' id='PanANGL'>Angle<br><input type='range' class='ax' min='10.0' max='60.0' value='20.0' id='PanSTEP'>Steps<br></div></div><div class='fontItem lineView bex'>
+<div class='varSup' style='text-transform: capitalize;' id='sliders-Pan'><input type='range' class='ax' min='0.0' max='30.0' value='20.0' name='Panwght' id='Panwght'><label for='Panwght'>Weight</label><br><input type='range' class='ax' min='0.0' max='360.0' value='180.0' name='PanANGL' id='PanANGL'><label for='PanANGL'>Angle</label><br><input type='range' class='ax' min='10.0' max='60.0' value='20.0' name='PanSTEP' id='PanSTEP'><label for='PanSTEP'>Steps</label><br></div></div><div class='fontItem lineView bex'>
 <p contenteditable="true" class="lineView">OHamburgefonstiv</p>
 
 <p contenteditable="true" class="gridView invisible">A</p>
-<div class='varSup' style='text-transform: capitalize;' id='sliders-bex'><input type='range' class='ax' min='0.0' max='1000.0' value='0.0' id='bexwght'>weight<br></div></div><div class='fontItem lineView Cheese_color_colr'>
+<div class='varSup' style='text-transform: capitalize;' id='sliders-bex'><input type='range' class='ax' min='0.0' max='1000.0' value='0.0' name='bexwght' id='bexwght'><label for='bexwght'>weight</label><br></div></div><div class='fontItem lineView Cheese_color_colr'>
 <p contenteditable="true" class="lineView">OHamburgefonstiv</p>
 
 <p contenteditable="true" class="gridView invisible">A</p>
@@ -103,7 +103,7 @@
 <p contenteditable="true" class="lineView">ZX SPECTRUM</p>
 
 <p contenteditable="true" class="gridView invisible">R</p>
-<div class='varSup' style='text-transform: capitalize;' id='sliders-Piksels'><input type='range' class='ax' min='0.0' max='700.0' value='0.0' id='PikselsPIXL'>Pixel<br><input type='range' class='ax' min='1.0' max='7.0' value='1.0' id='PikselsCHAR'>Character Set<br><input type='range' class='ax' min='50.0' max='150.0' value='100.0' id='PikselsPROP'>Proportion<br><input type='range' class='ax' min='-50.0' max='50.0' value='0.0' id='Pikselsslnt'>Slant<br><input type='range' class='ax' min='0.0' max='360.0' value='0.0' id='PikselsROTA'>Rotate<br></div></div><div class='fontItem lineView trees'>
+<div class='varSup' style='text-transform: capitalize;' id='sliders-Piksels'><input type='range' class='ax' min='0.0' max='700.0' value='0.0' name='PikselsPIXL' id='PikselsPIXL'><label for='PikselsPIXL'>Pixel</label><br><input type='range' class='ax' min='1.0' max='7.0' value='1.0' name='PikselsCHAR' id='PikselsCHAR'><label for='PikselsCHAR'>Character Set</label><br><input type='range' class='ax' min='50.0' max='150.0' value='100.0' name='PikselsPROP' id='PikselsPROP'><label for='PikselsPROP'>Proportion</label><br><input type='range' class='ax' min='-50.0' max='50.0' value='0.0' name='Pikselsslnt' id='Pikselsslnt'><label for='Pikselsslnt'>Slant</label><br><input type='range' class='ax' min='0.0' max='360.0' value='0.0' name='PikselsROTA' id='PikselsROTA'><label for='PikselsROTA'>Rotate</label><br></div></div><div class='fontItem lineView trees'>
 <p contenteditable="true" class="lineView">HORTUS BOTANICUS</p>
 
 <p contenteditable="true" class="gridView invisible">A</p>
@@ -127,7 +127,7 @@
 <p contenteditable="true" class="lineView">OHamburgefonstiv</p>
 
 <p contenteditable="true" class="gridView invisible">A</p>
-<div class='varSup' style='text-transform: capitalize;' id='sliders-waave'><input type='range' class='ax' min='100.0' max='700.0' value='400.0' id='waaveLMBD'>WaveLength<br><input type='range' class='ax' min='0.0' max='40.0' value='40.0' id='waaveAMPL'>Amplitude<br><input type='range' class='ax' min='0.0' max='10.0' value='0.0' id='waaveSHFT'>Phase<br></div></div><div class='fontItem lineView pixels-smal'>
+<div class='varSup' style='text-transform: capitalize;' id='sliders-waave'><input type='range' class='ax' min='100.0' max='700.0' value='400.0' name='waaveLMBD' id='waaveLMBD'><label for='waaveLMBD'>WaveLength</label><br><input type='range' class='ax' min='0.0' max='40.0' value='40.0' name='waaveAMPL' id='waaveAMPL'><label for='waaveAMPL'>Amplitude</label><br><input type='range' class='ax' min='0.0' max='10.0' value='0.0' name='waaveSHFT' id='waaveSHFT'><label for='waaveSHFT'>Shift</label><br></div></div><div class='fontItem lineView pixels-smal'>
 <p contenteditable="true" class="lineView">OHamburgefonstiv</p>
 
 <p contenteditable="true" class="gridView invisible">A</p>
@@ -139,7 +139,7 @@
 <p contenteditable="true" class="lineView">springlocks</p>
 
 <p contenteditable="true" class="gridView invisible">p</p>
-<div class='varSup' style='text-transform: capitalize;' id='sliders-BexTilt'><input type='range' class='ax' min='0.0' max='10.0' value='0.0' id='BexTiltital'>Italick<br></div></div><div class='fontItem lineView Contrast'>
+<div class='varSup' style='text-transform: capitalize;' id='sliders-BexTilt'><input type='range' class='ax' min='0.0' max='10.0' value='0.0' name='BexTiltital' id='BexTiltital'><label for='BexTiltital'>Italick</label><br></div></div><div class='fontItem lineView Contrast'>
 <p contenteditable="true" class="lineView">OHamburgefonstiv</p>
 
 <p contenteditable="true" class="gridView invisible">A</p>
