--- a/type/varUnits/BexTilt.html
+++ b/type/varUnits/BexTilt.html
@@ -2,7 +2,7 @@
 <div class='BexTilt noLowercasenoUppercase' id='varUnit'>
 
 <p contenteditable="true" class="lineView">springlocks</p>
-<div class='varSup' style='text-transform: capitalize;' id='sliders-BexTilt'><input type='range' class='ax' min='0.0' max='10.0' value='0.0' id='BexTiltital'>Italick<br></div>
+<div class='varSup' style='text-transform: capitalize;' id='sliders-BexTilt'><input type='range' class='ax' min='0.0' max='10.0' value='0.0' name='BexTiltital' id='BexTiltital'><label for='BexTiltital'>Italick</label><br></div>
 <script>
 const BexTiltSliders = document.querySelector("#sliders-BexTilt");
 BexTiltSliders.oninput = BexTiltChanger;
