--- a/type/varUnits/bex.html
+++ b/type/varUnits/bex.html
@@ -2,7 +2,7 @@
 <div class='bex' id='varUnit'>
 
 <p contenteditable="true" class="lineView">OHamburgefonstiv</p>
-<div class='varSup' style='text-transform: capitalize;' id='sliders-bex'><input type='range' class='ax' min='0.0' max='1000.0' value='0.0' id='bexwght'>weight<br></div>
+<div class='varSup' style='text-transform: capitalize;' id='sliders-bex'><input type='range' class='ax' min='0.0' max='1000.0' value='0.0' name='bexwght' id='bexwght'><label for='bexwght'>weight</label><br></div>
 <script>
 const bexSliders = document.querySelector("#sliders-bex");
 bexSliders.oninput = bexChanger;
