--- a/type/varUnits/Piksels.html
+++ b/type/varUnits/Piksels.html
@@ -2,7 +2,7 @@
 <div class='Piksels noLowercase' id='varUnit'>
 
 <p contenteditable="true" class="lineView">ZX SPECTRUM</p>
-<div class='varSup' style='text-transform: capitalize;' id='sliders-Piksels'><input type='range' class='ax' min='0.0' max='700.0' value='0.0' id='PikselsPIXL'>Pixel<br><input type='range' class='ax' min='1.0' max='7.0' value='1.0' id='PikselsCHAR'>Character Set<br><input type='range' class='ax' min='50.0' max='150.0' value='100.0' id='PikselsPROP'>Proportion<br><input type='range' class='ax' min='-50.0' max='50.0' value='0.0' id='Pikselsslnt'>Slant<br><input type='range' class='ax' min='0.0' max='360.0' value='0.0' id='PikselsROTA'>Rotate<br></div>
+<div class='varSup' style='text-transform: capitalize;' id='sliders-Piksels'><input type='range' class='ax' min='0.0' max='700.0' value='0.0' name='PikselsPIXL' id='PikselsPIXL'><label for='PikselsPIXL'>Pixel</label><br><input type='range' class='ax' min='1.0' max='7.0' value='1.0' name='PikselsCHAR' id='PikselsCHAR'><label for='PikselsCHAR'>Character Set</label><br><input type='range' class='ax' min='50.0' max='150.0' value='100.0' name='PikselsPROP' id='PikselsPROP'><label for='PikselsPROP'>Proportion</label><br><input type='range' class='ax' min='-50.0' max='50.0' value='0.0' name='Pikselsslnt' id='Pikselsslnt'><label for='Pikselsslnt'>Slant</label><br><input type='range' class='ax' min='0.0' max='360.0' value='0.0' name='PikselsROTA' id='PikselsROTA'><label for='PikselsROTA'>Rotate</label><br></div>
 <script>
 const PikselsSliders = document.querySelector("#sliders-Piksels");
 PikselsSliders.oninput = PikselsChanger;
