other default word in piksels

--- a/piksels.html
+++ b/piksels.html
@@ -61,7 +61,7 @@
       <img src="content/piksels/CASTLE.gif" />
       <link rel="stylesheet" href="type/css/Piksels.css" />
       <div class="Piksels noLowercase" id="varUnit">
-        <p contenteditable="true" class="lineView">ZX SPECTRUM</p>
+        <p contenteditable="true" class="lineView">DUCK HUNT</p>
         <div
           class="varSup"
           style="text-transform: capitalize"
