--- a/index.html
+++ b/index.html
@@ -60,6 +60,32 @@
 <div class="clear"></div>
 <div class="project">
   <div class="cover">
+    <a href="Pan.html">
+      <img src="content/pan/cover.png" />
+    </a>
+  </div>
+
+  <div class="title">
+    <a href="Pan.html">Pan</a>
+  </div>
+  <div class="tags"><ol><li>type</li><li>variable</li><li>experiment</li></ol></div>
+</div>
+<div class="clear"></div>
+<div class="project">
+  <div class="cover">
+    <a href="NESFonts.html">
+      <img src="content/NESFont/cover.png" />
+    </a>
+  </div>
+
+  <div class="title">
+    <a href="NESFonts.html">NES Fonts</a>
+  </div>
+  <div class="tags"><ol><li>type</li><li>8bit</li><li>pixels</li><li></li></ol></div>
+</div>
+<div class="clear"></div>
+<div class="project">
+  <div class="cover">
     <a href="golf.html">
       <img src="content/wave/cover.gif" />
     </a>
